texlive-bin (2015.20150524.37493-7) UNRELEASED; urgency=medium

  * Multi-arch conversion:
    - bump dh dep to >= 9
    - add Pre-Depends: ${misc:Pre-Depends} to all shlibs packages
    - replace usr/lib with usr/lib/* throughout
    - mark texlive-binaries (and dummy luatex) M-A: foreign
    - mark all shlib packages M-A: same (but leave the -dev packages for now)

 -- Norbert Preining <preining@debian.org>  Sun, 20 Sep 2015 11:26:49 +0900

texlive-bin (2015.20150524.37493-6) unstable; urgency=medium

  * fix garbled output of vptovf and ovf2ovp (Closes: #795054)
    Note, all the output is going to STDERR now.
  * add several dvipdfm-x and type1 related upstream patches
  * add dependency on t1utils (t1disasm) as dvipdfm* needs it for
    the time being.

 -- Norbert Preining <preining@debian.org>  Sun, 23 Aug 2015 13:41:45 +0900

texlive-bin (2015.20150524.37493-5) unstable; urgency=medium

  * mv c-auto.h back into /usr/include/kpathsea, we need a different
    approach for multi-arch than upstream TeX Live, thanks Jakub Wilk.
  * also remove the /usr/lib entry from the pkgconfig file for kpathsea

 -- Norbert Preining <preining@debian.org>  Thu, 02 Jul 2015 08:46:11 +0900

texlive-bin (2015.20150524.37493-4) unstable; urgency=medium

  * fix missing c-auto.h install (Closes: #790294)
  * add --fail-missing to dh_install call to make sure that we get
    warned if new files are installed
  * use mktemp instead of hard-coded tmp dir in dvitohp (Closes: #496899)
  * do not install texconfig-dialog man page

 -- Norbert Preining <preining@debian.org>  Tue, 30 Jun 2015 12:58:41 +0900

texlive-bin (2015.20150524.37493-3) unstable; urgency=medium

  * fix deps for archs were not luajittex is available (Closes: #790006)

 -- Norbert Preining <preining@debian.org>  Fri, 26 Jun 2015 16:53:02 +0900

texlive-bin (2015.20150524.37493-2) unstable; urgency=medium

  * upload to unstable

 -- Norbert Preining <preining@debian.org>  Thu, 25 Jun 2015 14:58:57 +0900
