@@ -6,8 +6,9 @@ texlive-bin (2015.20150524.37493-7) UNRELEASED; urgency=medium
     - replace usr/lib with usr/lib/* throughout
     - mark texlive-binaries (and dummy luatex) M-A: foreign
     - mark all shlib packages M-A: same (but leave the -dev packages for now)
+    - move c-auto.h into /u/i/$triplet/kpathsea
 
- -- Norbert Preining <preining@debian.org>  Sun, 20 Sep 2015 11:26:49 +0900
+ -- Norbert Preining <preining@debian.org>  Mon, 21 Sep 2015 09:47:11 +0900
 
 texlive-bin (2015.20150524.37493-6) unstable; urgency=medium
 
